packages/compiler/tests/fixtures/invalid/fetch-in-handler.svelte
<script>
  let count = 0
  function handler() {
    fetch("/api")
  }
</script>
<text on:select={handler} focusable>{count}</text>
